w3af-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security
  namespace: security
